--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -7,3 +7,11 @@
 # Leadership
 - skill: Leadership
   description: Managed multiple asynchronous teams in the development, maintenance, and release of various web applications and websites.
+  
+# Analysis
+- skill: Data Analysis
+  description: Analysed data from various environments to check for conflict and resolve issues
+  
+# Visualization
+- skill: Tableau
+  description: Proficient in data visualization tool such as Tableau
